deploy/base/core-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-app
  namespace: core-app
spec:
  selector: { app: core-app }
  ports:
    - port: 8080
      targetPort: 8080
